# scd-rs

./: .gitignore  Cargo.toml  Containerfile.test  LICENSE  README.md  RUST_REWRITE_PLAN.md  claude-desktop-no-pcsc.desktop  claude-desktop-no-pcsc.sh  gpg-card-watch.service  gpg-card-watch.sh  justfile
.buildkite/: pipeline.yml
.github/workflows/: pr.yml
crates/scd-rs/: Cargo.toml
crates/scd-rs-assuan/: Cargo.toml
crates/scd-rs-assuan/src/: framing.rs  lib.rs  protocol.rs  server.rs  session.rs
crates/scd-rs-assuan/tests/: echo.rs
crates/scd-rs-bin/: Cargo.toml
crates/scd-rs-bin/src/: commands.rs  duration_str.rs  lib.rs  pin_ttl.rs  pinentry.rs  state.rs
crates/scd-rs-card/: Cargo.toml
crates/scd-rs-card/src/: keygrip.rs  lib.rs
crates/scd-rs/src/: commands.rs  lib.rs  pin_ttl.rs  pinentry.rs  pool_ttl.rs  state.rs
docs/: design-notes.md  required-commands.md
scripts/: capture-scdrs-traces.sh  capture-traces.sh  normalize-trace.py  scd-rs-debug.sh
tests/soak/: stress.sh
