[workspace]
resolver = "2"
members = [
    "crates/scd-rs-card",
    "crates/scd-rs-assuan",
    "crates/scd-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/quickvm/scd-rs"
authors = ["QuickVM, LLC <hello@quickvm.com>"]

[workspace.dependencies]
card-backend = "0.2"
card-backend-pcsc = "0.5.1"
openpgp-card = "0.6.1"
sha1 = "0.11"
tokio = { version = "1.52", features = ["net", "io-std", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"
clap = { version = "4.6", features = ["derive"] }
hex = "0.4"
proptest = "1.11"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
