[package]
name = "scd-rs-assuan"
description = "Assuan protocol server for scdaemon-compatible daemons"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.27"
tokio = { workspace = true, features = ["test-util", "rt", "macros"] }

[lints]
workspace = true
