[package]
name = "scd-rs-card"
description = "Sequoia-backed OpenPGP card access with per-operation handle discipline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openpgp-card = { workspace = true }
card-backend-pcsc = { workspace = true }
openpgp-card-sequoia = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
