[package]
name = "scd-rs-card"
description = "OpenPGP card access for scd-rs with per-operation handle discipline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
card-backend = { workspace = true }
card-backend-pcsc = { workspace = true }
openpgp-card = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
